# ChangeLog for x11-misc/dispad
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*dispad-0.1 (27 May 2011)

  27 May 2011; Michael Weber <xmw@gentoo.org> +dispad-0.1.ebuild,
  +metadata.xml:
  Initial import, thanks to Ryan Bourgeois for the initial ebuild (bug 368823)
