@@ -1,14 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST dispad-0.1.tar.gz 19882 RMD160 d172d89e2aa7794311a158e2278e247fa8788c4a SHA1 17730d694593da39044362776b5374bbf26a5e84 SHA256 0df12283aa72ee05c4f6ada3b51c774bb1a79251353bb273f43c590a3614d531
-EBUILD dispad-0.1.ebuild 619 RMD160 2f44d4c6b3e59df946d1d8084dd126b4921b700e SHA1 37a60be288e27b77b06daa61383e090af7bce5ae SHA256 3ae80c803199d50d96e1d92930eedad19ca036cc461e6440178b62ae5dfe217d
-MISC ChangeLog 306 RMD160 ccd5758e3eb5f3c4983181e0dc5e18abab5074d4 SHA1 b4f686074e12bf7143f60d8977b33e3231ccbba9 SHA256 1ae75134f9258dc7dff2d3d596afa1199b671733b918892552f75de59d1647c5
-MISC metadata.xml 291 RMD160 b216638c47fdbfc1e5deeb7d817ba8265d476441 SHA1 c77ea1a1c55228d42f5661c4da30c35e5ed716f9 SHA256 f551ac2bd8d4522388964032ec1a95749047a3d076983e81d3b5baaadffc41fa
+DIST dispad-0.1.tar.gz 19882 SHA256 0df12283aa72ee05c4f6ada3b51c774bb1a79251353bb273f43c590a3614d531 SHA512 7215c9258fbf69f8d925af14c317512b2c7db3cce0203d6be33112daf6b25feb3578b26bf634a62c00d007efdb4945e514ab9e2d227732ea8e8a65ae028b720e WHIRLPOOL c5d6a267c8685726b6d11a5892d3e470e43778ebe88e70411bd6497e819b0da3f764a5e6fcf931a3f694be72ac7fdec633161fce04989dcb80f239aea976ba14
+DIST dispad-0.3.tar.gz 20062 SHA256 fac39c50cdae5d6a2dee5ceaf3c6e6bea95b65b72b5bf5e1829ac08f91b696a0 SHA512 c0d548a2218200f435f25d1837bf9fe1b9fe19fc4f52f19832d1b5718699f1d5af2eabe36a669a382c614902fa174c7d06b3ee15cc6e5cc2124d8423c2804965 WHIRLPOOL 42a6dacd7d4ab9bd74a3f97e94e4dfdad0ce7e7b83c6bcbeaf47ed73b4328e01017ec5e1a660d89e8f76f243666b9fe3af6b9771c689c560f08e0af33c54a055
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk3fbNkACgkQknrdDGLu8JD9WQD/b+KoJEYGwgatjWq41sIN6E2i
-WThV34MiVJ7lfc3Yt0MA/iS/bXz9omPp2cLH09YzqzUOfq7/bwWVPEJ+KwP0e9d0
-=FDyB
+iF4EAREIAAYFAlDQVe8ACgkQknrdDGLu8JAWkAD/YyejlxAzdGxjZEume4cZd1qU
+l7qG4Qc0JcFeGdvEu7EA/0n3CBlg49BqP8/HVqGnos521ppkuX1+hLhygo95o9OD
+=sMYW
 -----END PGP SIGNATURE-----
